--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,9 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: rgb(15, 22, 36);
+  max-width: 1280px;
+  width: 100%;
+  margin: auto;
+  padding: 1rem 2rem;
+  color: #f0f8ff;
 }
