--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -11,21 +11,40 @@
 
 .nav-list {
   display: flex;
-  gap: 0.7rem;
+  gap: 2rem;
   font-weight: 500;
 }
 
-.nav-list-item {
+.nav-list-link {
+  display: block;
   transition: 0.3s ease;
 }
 
-.nav-list-item:hover {
+.nav-list-link:hover {
   color: rgb(255, 255, 255, 0.75);
+}
+
+.nav-list-item:hover .nav-list-link {
+  color: rgb(255, 255, 255, 0.75);
+}
+
+.burger {
+  display: none;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.burger-line {
+  width: 100%;
+  height: 0.1rem;
+  background-color: #f0f8ff;
+  transition: 0.3s ease;
+  z-index: 3;
 }
 
 .socials-list {
   display: flex;
-  gap: 1rem;
+  gap: 1.5rem;
 }
 
 .socials-list-item {
@@ -36,4 +55,71 @@
 
 .socials-list-item:hover {
   transform: scale(1.2);
+}
+
+@media (max-width: 780px) {
+  .nav-list {
+    gap: 0.7rem;
+  }
+
+  .socials-list {
+    gap: 1rem;
+  }
+}
+
+@media (max-width: 680px) {
+  .nav {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 320px;
+    min-height: 100vh;
+    background-color: #0f1624;
+    transition: 0.5s ease;
+    transform: translateX(-200%);
+    z-index: 2;
+    overflow-y: auto;
+  }
+
+  .nav.opened {
+    transform: translateX(0);
+  }
+
+  .burger {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    transition: 0.3s ease;
+    z-index: 3;
+  }
+
+  .burger.opened {
+    transform: rotate(-90deg);
+  }
+
+  .burger:hover {
+    cursor: pointer;
+  }
+
+  .nav-list {
+    flex-direction: column;
+    min-height: 475px;
+    padding: 7.5rem 0 0 3.5rem;
+  }
+
+  .nav-list-item {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .bg-placeholder {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgb(0, 0, 0, 0.4);
+    z-index: 1;
+  }
 }
