--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -14,7 +14,6 @@
 .app-title {
   margin-right: auto;
   font-size: 3.5rem;
-  /* background: linear-gradient(90deg, rgba(9, 0, 159, 1) 0%, rgba(0, 255, 149, 1) 35%); */
   background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(175, 175, 175, 1) 75%);
   background-clip: text;
   -webkit-background-clip: text;
@@ -72,4 +71,19 @@
   border-radius: 10%;
   box-shadow: 2px 4px 16px rgb(0 0 0 / 26%);
   overflow: hidden;
+}
+
+@media (max-width: 680px) {
+  .hero-section {
+    max-width: none;
+    align-items: center;
+  }
+
+  .app-title {
+    margin-right: 0;
+  }
+
+  .hero-img-container {
+    display: none;
+  }
 }
