--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,17 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(15, 22, 36);
+  background-color: #0f1624;
 }
 
 code {
@@ -25,4 +29,16 @@ ul {
 a {
   text-decoration: none;
   color: #f0f8ff;
+}
+
+@media (max-width: 455px) {
+  html {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 374px) {
+  html {
+    font-size: 10px;
+  }
 }
