--- a/src/components/education/education.css
+++ b/src/components/education/education.css
@@ -29,7 +29,7 @@
   font-size: 1.3rem;
 }
 
-.expandbutton-list-item {
+.education-list-item {
   display: grid;
   grid-template-columns: 1fr 0.6fr 2fr 1.1fr;
   align-items: center;
@@ -38,7 +38,7 @@
   border-bottom: 1px solid #f0f8ff;
 }
 
-.expandbutton-list-item:last-child {
+.education-list-item:last-child {
   border-bottom: none;
 }
 
@@ -62,6 +62,10 @@
   border-color: rgb(255, 255, 255, 0.75);
 }
 
+.education-status-link.disabled {
+  pointer-events: none;
+}
+
 .education-specification {
   font-size: 1.3rem;
 }
@@ -71,7 +75,7 @@
 }
 
 @media (max-width: 767px) {
-  .expandbutton-list-item {
+  .education-list-item {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, 1fr);
     row-gap: 0.7rem;
