--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -71,6 +71,12 @@
 .project-stack {
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  padding: 0 10px;
+}
+
+.project-technology {
+  text-align: center;
 }
 
 .project-btns-container {
